fix: resolve all validation script errors

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
 @import "./components/ParentCard.css";
 @import "./components/common/PairedParentCard.css";
 @import "./components/common/PlaceholderCard.css";
+@import "./components/ProbabilityCalculatorModal.css";
 @import "./components/common/RangeSlider.css";
 @import "./components/SelectAcquirableSkillsModal.css";
 @import "./components/SelectGrandparentModal.css";
